2016-01-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/validator.c (openvas_validator_rule_free): Fix memory leak.

2017-01-16  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/gsa_chart_helpers.js (data_quantile_histogram):
	Make bin width and count calculation work better with small numbers
	of values.

2017-01-16  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/gsa_chart_helpers.js (html_table_from_records):
	Use regex to check stylesheet URLs and include ng main.[...].css.
	(clone_svg): Use document.createElementNS to create new elements
	to ensure correct capitalization of tagName.  Remove href attributes
	only from "a" elements.  Add workarounds for missing "xlink" prefix
	and quotes in url(...) styles.
	(svg_from_elem): Use regex to check stylesheet URLs and include ng 
	main.[...].css.

	* src/html/classic/js/gsa_gantt_chart.js
	(GanttChartGenerator.prototype.generate): Add xlink:href attribute
	for gradients to ensure they work when exported.  Fix y2 attribute of
	gradients.

2016-01-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_http_handler.c (handle_setup_user, handle_omp_post),
	src/gsad_omp.c (get_many): Fix memory leaks.

2017-01-13  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Add Vulns by hosts area chart.  Generally allow line charts to fill the
	area under the lines and to have an x axis not using time values.

	* src/html/classic/graphics.xsl (report-charts): Add "is_timeline"
	gen-param to the timeline chart.
	(vuln-charts): Change title of "vuln-by-hosts" to "Vulns by host - bar"
	and add chart "vuln-by-hosts-area".
	(host-charts, note-charts, override-charts, common-charts)
	(js-scan-management-top-visualization): Add "is_timeline" gen-param to
	the timeline chart.

	* src/html/classic/js/gsa_chart_helpers.js (fill_in_numbered_records):
	New function.

	* src/html/classic/js/gsa_line_chart.js (find_record_index)
	(LineChartGenerator.prototype.init)