@@ -1,3 +1,8 @@
+2017-01-16  Timo Pollmeier <timo.pollmeier@greenbone.net>
+
+	* src/gsad_omp.c (new_permissions): Test if related is NULL before
+	trying to iterate over table of related resources.
+
 2016-01-16  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* src/validator.c (openvas_validator_rule_free): Fix memory leak.
